@@ -56,6 +56,8 @@
 <a name="mni_interface"></a>
 <h3>Interface</h3>
 
+<p>TEA has two interface mode - the Classical one and the new, so called Docked mode. You can switch between them at <b>Tune - Interface - UI mode</b>. At the docked mode, you can tear off and/or move the Logmemo and FIF (see below). The default UI is the Classical.</p>
+
 <p>From the top to bottom, there are:</p>
 
 <p>1. <b>The main menu</b>. Note that you can tear submenus off and place them somewhere over the desktop. Menu items are highly depended on the current task or even editor mode. Some menus can be visible or hidden according to the task (editing, file browsing, etc.).</p>
